show a toast about changing a color at a theme

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -104,6 +104,7 @@
     <string name="light_theme">Tema suave</string>
     <string name="dark_theme">Tema oscuro</string>
     <string name="custom">Customizado</string>
+    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
     <string name="save">Guardar</string>
     <string name="discard">Deshacer</string>
     <string name="undo_changes">Deshacer cambios</string>
