--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -104,6 +104,7 @@
     <string name="light_theme">Tema chiaro</string>
     <string name="dark_theme">Tema scuro</string>
     <string name="custom">Personale</string>
+    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
     <string name="save">Salva</string>
     <string name="discard">Scarta</string>
     <string name="undo_changes">Annulla modifiche</string>
