--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -104,6 +104,7 @@
     <string name="light_theme">Motyw jasny</string>
     <string name="dark_theme">Motyw ciemny</string>
     <string name="custom">Własny</string>
+    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
     <string name="save">Zapisz</string>
     <string name="discard">Porzuć</string>
     <string name="undo_changes">Cofnij zmiany</string>
