--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -104,6 +104,7 @@
     <string name="light_theme">Светлая тема</string>
     <string name="dark_theme">Тёмная тема</string>
     <string name="custom">Настраиваемое</string>
+    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
     <string name="save">Сохранить</string>
     <string name="discard">Сбросить</string>
     <string name="undo_changes">Отменить изменения</string>
