--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -105,6 +105,7 @@
     <string name="light_theme">Svetlá téma</string>
     <string name="dark_theme">Tmavá téma</string>
     <string name="custom">Vlastná</string>
+    <string name="changing_color_description">Zmena farby spôsobí prepnutie na Vlastnú tému</string>
     <string name="save">Uložiť</string>
     <string name="discard">Zahodiť</string>
     <string name="undo_changes">Vrátiť zmeny</string>
