--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -104,6 +104,7 @@
     <string name="light_theme">Hafif tema</string>
     <string name="dark_theme">Koyu tema</string>
     <string name="custom">Özel</string>
+    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
     <string name="save">Kaydet</string>
     <string name="discard">At</string>
     <string name="undo_changes">Değişiklikleri geri al</string>
