--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -104,6 +104,7 @@
     <string name="light_theme">Helles Thema</string>
     <string name="dark_theme">Dunkles Thema</string>
     <string name="custom">Benutzerdefiniert</string>
+    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
     <string name="save">Speichern</string>
     <string name="discard">Verwerfen</string>
     <string name="undo_changes">Änderungen rückgängig machen</string>
