--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -104,6 +104,7 @@
     <string name="light_theme">Thème lumineux</string>
     <string name="dark_theme">Thème sombre</string>
     <string name="custom">Personnalisé</string>
+    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
     <string name="save">Sauvegarder</string>
     <string name="discard">Rejeter</string>
     <string name="undo_changes">Annuler les changements</string>
