--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -104,6 +104,7 @@
     <string name="light_theme">Light theme</string>
     <string name="dark_theme">Dark theme</string>
     <string name="custom">Custom</string>
+    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
     <string name="save">保存</string>
     <string name="discard">Discard</string>
     <string name="undo_changes">Undo changes</string>
