--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -25,8 +25,8 @@
     <string name="copy">Kopieren</string>
     <string name="move">Verschieben</string>
     <string name="copy_move">Kopieren / Verschieben</string>
-    <string name="copy_to">Copy to</string>
-    <string name="move_to">Move to</string>
+    <string name="copy_to">Kopieren nach</string>
+    <string name="move_to">Verschieben nach</string>
     <string name="source">Quelle</string>
     <string name="destination">Ziel</string>
     <string name="select_destination">Ziel auswählen</string>
@@ -42,12 +42,12 @@
     <string name="moving_success">Dateien erfolgreich verschoben</string>
     <string name="moving_success_partial">Einige Dateien konnten nicht verschoben werden</string>
     <string name="copying_success_partial">Einige Dateien konnten nicht kopiert werden</string>
-    <string name="no_files_selected">No files selected</string>
+    <string name="no_files_selected">Keine Dateien ausgewählt</string>
 
     <!-- Create new -->
     <string name="create_new">Neuen Ordner</string>
-    <string name="folder">Folder</string>
-    <string name="file">File</string>
+    <string name="folder">Ordner</string>
+    <string name="file">Datei</string>
     <string name="create_new_folder">Neuen Ordner erstellen</string>
     <string name="name_taken">Ordner oder Datei mit diesem Namen existiert bereits</string>
     <string name="invalid_name">Der Name enthält nicht erlaubte Zeichen</string>
