add the Camera to properties dialog

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -94,6 +94,7 @@
     <string name="exposure_time">Belichtungszeit</string>
     <string name="iso_speed">Filmempfindlichkeit</string>
     <string name="f_number">Blendenzahl</string>
+    <string name="camera">Camera</string>
 
     <!-- Color customization -->
     <string name="background_color">Hintergrundfarbe</string>
