--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -94,6 +94,7 @@
     <string name="exposure_time">Exposure time</string>
     <string name="iso_speed">ISO speed</string>
     <string name="f_number">F-number</string>
+    <string name="camera">Camera</string>
 
     <!-- Color customization -->
     <string name="background_color">Color del fondo</string>
