--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -94,6 +94,7 @@
     <string name="exposure_time">Durée d\'exposition</string>
     <string name="iso_speed">Sensibilité ISO</string>
     <string name="f_number">Ouverture</string>
+    <string name="camera">Camera</string>
 
     <!-- Color customization -->
     <string name="background_color">Couleur d\'arrière-plan</string>
