--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -94,6 +94,7 @@
     <string name="exposure_time">Tempo di esposizione</string>
     <string name="iso_speed">Velocità ISO</string>
     <string name="f_number">Rapporto focale</string>
+    <string name="camera">Camera</string>
 
     <!-- Color customization -->
     <string name="background_color">Colore di sfondo</string>
