--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -94,6 +94,7 @@
     <string name="exposure_time">Czas ekspozycji</string>
     <string name="iso_speed">ISO</string>
     <string name="f_number">F-numer</string>
+    <string name="camera">Camera</string>
 
     <!-- Color customization -->
     <string name="background_color">Kolor tła</string>
