--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -94,6 +94,7 @@
     <string name="exposure_time">Выдержка</string>
     <string name="iso_speed">Светочувствительность(ISO)</string>
     <string name="f_number">Число диафрагмы</string>
+    <string name="camera">Camera</string>
 
     <!-- Color customization -->
     <string name="background_color">Цвет фона</string>
