--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -95,6 +95,7 @@
     <string name="exposure_time">Dĺžka expozície</string>
     <string name="iso_speed">Rýchlosť ISO</string>
     <string name="f_number">Clonové číslo</string>
+    <string name="camera">Fotoaparát</string>
 
     <!-- Color customization -->
     <string name="background_color">Farba pozadia</string>
