--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -94,6 +94,7 @@
     <string name="exposure_time">Exponeringstid</string>
     <string name="iso_speed">ISO-grader</string>
     <string name="f_number">F-nummer</string>
+    <string name="camera">Camera</string>
 
     <!-- Color customization -->
     <string name="background_color">Bakgrundsfärg</string>
