--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -94,6 +94,7 @@
     <string name="exposure_time">Tempo de exposição</string>
     <string name="iso_speed">Velocidade ISO</string>
     <string name="f_number">Número F</string>
+    <string name="camera">Camera</string>
 
     <!-- Color customization -->
     <string name="background_color">Cor de fundo</string>
