--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -94,6 +94,7 @@
     <string name="exposure_time">Pozlama süresi</string>
     <string name="iso_speed">ISO hızı</string>
     <string name="f_number">F-numarası</string>
+    <string name="camera">Camera</string>
 
     <!-- Color customization -->
     <string name="background_color">Arkaplan rengi</string>
