expand the SD card permission dialog with another text

--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -67,6 +67,7 @@
     <string name="select_file">ファイルを選択</string>
     <string name="confirm_storage_access_title">外部ストレージのアクセスを確認してください</string>
     <string name="confirm_storage_access_text">次の画面で SD カードのルートフォルダーを選択して、書き込みアクセス許可を付与してください</string>
+    <string name="confirm_storage_access_text_sd">If you don\'t see the SD card, try this</string>
 
     <plurals name="items">
         <item quantity="one">%1$d アイテム</item>
