--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -67,6 +67,7 @@
     <string name="select_file">Wähle eine Datei aus</string>
     <string name="confirm_storage_access_title">Bitte bestätige Zugriff auf externen Speicher</string>
     <string name="confirm_storage_access_text">Bitte wähle das Hauptverzeichnis deiner SD Karte auf dem nächsten Bildschirm um Schreibzugriff zu erlauben</string>
+    <string name="confirm_storage_access_text_sd">If you don\'t see the SD card, try this</string>
 
     <plurals name="items">
         <item quantity="one">%1$d Datei/Ordner</item>
