updating the german strings by M.B.

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Abbrechen</string>
-    <string name="search">Suche</string>
+    <string name="search">Suchen</string>
     <string name="save_as">Speichern unter</string>
     <string name="file_saved">Datei erfolgreich gespeichert</string>
-    <string name="invalid_file_format">Invalid file format</string>
-    <string name="no_storage_permissions">We need the permission to access your storage</string>
+    <string name="invalid_file_format">Ungültiges Dateiformat</string>
+    <string name="no_storage_permissions">Berechtigung zum Zugriff auf den Speicher erforderlich</string>
 
     <!-- Renaming -->
     <string name="rename_file">Datei umbenennen</string>
@@ -30,8 +30,8 @@
     <string name="source">Quelle</string>
     <string name="destination">Ziel</string>
     <string name="select_destination">Ziel auswählen</string>
-    <string name="click_select_destination">Klicke hier um Ziel auszuwählen</string>
-    <string name="invalid_destination">Konnte nicht an ausgewähltes Ziel schreiben</string>
+    <string name="click_select_destination">Klicken um Ziel auszuwählen</string>
+    <string name="invalid_destination">Konnte nicht auf ausgewähltes Ziel schreiben</string>
     <string name="please_select_destination">Bitte Ziel auswählen</string>
     <string name="source_and_destination_same">Quell- und Zielpfad sind identisch</string>
     <string name="copy_failed">Konnte die Datei nicht kopieren</string>
@@ -45,13 +45,13 @@
     <string name="no_files_selected">Keine Dateien ausgewählt</string>
 
     <!-- Create new -->
-    <string name="create_new">Neuen Ordner</string>
+    <string name="create_new">Neuer Ordner</string>
     <string name="folder">Ordner</string>
     <string name="file">Datei</string>
     <string name="create_new_folder">Neuen Ordner erstellen</string>
     <string name="name_taken">Ordner oder Datei mit diesem Namen existiert bereits</string>
     <string name="invalid_name">Der Name enthält nicht erlaubte Zeichen</string>
-    <string name="empty_name">Bitte gebe einen Namen an</string>
+    <string name="empty_name">Bitte einen Namen angeben</string>
     <string name="unknown_error_occurred">Ein unbekannter Fehler ist aufgetreten</string>
 
     <!-- Copy conflicts -->
@@ -65,9 +65,9 @@
     <!-- File picker -->
     <string name="select_folder">Wähle einen Ordner aus</string>
     <string name="select_file">Wähle eine Datei aus</string>
-    <string name="confirm_storage_access_title">Bitte bestätige Zugriff auf externen Speicher</string>
-    <string name="confirm_storage_access_text">Bitte wähle das Hauptverzeichnis deiner SD Karte auf dem nächsten Bildschirm um Schreibzugriff zu erlauben</string>
-    <string name="confirm_storage_access_text_sd">If you don\'t see the SD card, try this</string>
+    <string name="confirm_storage_access_title">Bitte Zugriff auf externen Speicher bestätigen</string>
+    <string name="confirm_storage_access_text">Bitte wähle das Hauptverzeichnis deiner SD-Karte auf dem nächsten Bildschirm, um Schreibzugriff zu erlauben</string>
+    <string name="confirm_storage_access_text_sd">Wenn die SD-Karte nicht sichtbar ist, versuche das</string>
 
     <plurals name="items">
         <item quantity="one">%1$d Datei/Ordner</item>
@@ -75,18 +75,18 @@
     </plurals>
 
     <!-- Storages -->
-    <string name="select_storage">Wähle den Speicher aus</string>
+    <string name="select_storage">Speicher auswählen</string>
     <string name="internal">Intern</string>
-    <string name="sd_card">SD Karte</string>
+    <string name="sd_card">SD-Karte</string>
     <string name="root">Hauptverzeichnis</string>
-    <string name="wrong_root_selected">Wrong folder selected, please select the root folder of your SD card</string>
+    <string name="wrong_root_selected">Falscher Ordner ausgewählt, bitte Hauptverzeichnis der SD-Karte auswählen</string>
 
     <!-- File properties -->
     <string name="properties">Eigenschaften</string>
-    <string name="path">Dateipfad</string>
+    <string name="path">Pfad</string>
     <string name="items_selected">Dateien ausgewählt</string>
-    <string name="direct_children_count">Direct children count</string>
-    <string name="files_count">Gesamtanzahl</string>
+    <string name="direct_children_count">Enthaltene Elemente (direkt)</string>
+    <string name="files_count">Enthaltene Dateien (gesamt)</string>
     <string name="resolution">Auflösung</string>
     <string name="duration">Dauer</string>
     <string name="artist">Künstler</string>
@@ -95,7 +95,7 @@
     <string name="exposure_time">Belichtungszeit</string>
     <string name="iso_speed">Filmempfindlichkeit</string>
     <string name="f_number">Blendenzahl</string>
-    <string name="camera">Camera</string>
+    <string name="camera">Kamera</string>
     <string name="exif">EXIF</string>
 
     <!-- Color customization -->
@@ -107,16 +107,16 @@
     <string name="light_theme">Helles Thema</string>
     <string name="dark_theme">Dunkles Thema</string>
     <string name="custom">Benutzerdefiniert</string>
-    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
+    <string name="changing_color_description">Ändern einer Farbe setzt das Thema auf Benutzerdefiniert</string>
     <string name="save">Speichern</string>
     <string name="discard">Verwerfen</string>
     <string name="undo_changes">Änderungen rückgängig machen</string>
-    <string name="undo_changes_confirmation">Bist du sicher, das du die Änderungen rückgängig machen willst?</string>
-    <string name="save_before_closing">Du hast ungespeicherte Änderungen. Speichern vor beenden?</string>
+    <string name="undo_changes_confirmation">Bist du sicher, dass du die Änderungen rückgängig machen willst?</string>
+    <string name="save_before_closing">Du hast ungespeicherte Änderungen. Speichern vorm Beenden?</string>
 
     <!-- What's new -->
     <string name="whats_new">Neue Funktionen</string>
-    <string name="whats_new_disclaimer">* Hier werden kleinere Verbesserungen weggelassen</string>
+    <string name="whats_new_disclaimer">* Kleinere Verbesserungen werden nicht gelistet</string>
 
     <!-- Actionbar items -->
     <string name="delete">Löschen</string>
@@ -139,29 +139,29 @@
     <string name="use_for_this_folder">Nur für diesen Ordner verwenden</string>
 
     <!-- Confirmation dialog -->
-    <string name="proceed_with_deletion">Möchtest du mit dem Löschen fortfahren?</string>
+    <string name="proceed_with_deletion">Willst du mit dem Löschen fortfahren?</string>
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
 
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
     <string name="customize_colors">Farben anpassen</string>
-    <string name="show_hidden">Zeige versteckte Dateien und Ordner</string>
+    <string name="show_hidden">Versteckte Dateien und Ordner zeigen</string>
 
     <!-- About -->
     <string name="about">Über</string>
-    <string name="website_label">Weitere einfache Apps und Quellcode findest du auf</string>
-    <string name="email_label">Sende Vorschläge und Feedback an</string>
+    <string name="website_label">Weitere schlichte Apps und Quellcode finden sich auf</string>
+    <string name="email_label">Vorschläge und Feedback bitte senden an</string>
     <string name="more_apps_underlined"><u>Weitere Apps</u></string>
     <string name="third_party_licences_underlined"><u>Drittanbieterlizenzen</u></string>
-    <string name="invite_friends_underlined"><u>Lade Freunde ein</u></string>
+    <string name="invite_friends_underlined"><u>Freunde einladen</u></string>
     <string name="share_text">Hey, wirf mal einen Blick auf %1$s: %2$s</string>
     <string name="invite_via">Einladen via</string>
     <string name="rate_us_underlined"><u>Bewerte uns im Play Store</u></string>
     <string name="donate_underlined"><u>Spenden</u></string>
     <string name="follow_us">Folge uns:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
-    <string name="donate_please">Hey,\n\nseems like you\'ve been using this app for quite a while now.\n\nDid you know it\'s not backed by any big company? Developing it takes time and I want to keep it adfree, so your support would be appreciated.\n\nYou can support me either by buying a paid app Simple Thank You, by sending money through Paypal or by sending bitcoins.\n\nMore info at http://simplemobiletools.com/donate.\n\nThank you!</string>
+    <string name="donate_please">Hey,\n\nscheint als ob diese App nun schon eine Weile in Gebrauch wäre.\n\nIst dir bewusst, dass hinter ihr kein größeres Unternehmen steht? Ihre Entwicklung kostet Zeit, und ich möchte sie werbefrei erhalten, daher würde ich Unterstützung sehr schätzen.\n\nDu kannst mich unterstützen mittels der Kauf-App Simple Thank You, durch Geldtransfer über Paypal oder mittels Senden von Bitcoins.\n\nMehr Info auf http://simplemobiletools.com/donate.\n\nVielen Dank!</string>
 
     <!-- License -->
     <string name="notice">Diese App nutzt die folgenden Drittanbieterbilbiotheken, die mein Leben einfacher machen. Danke.</string>
@@ -172,9 +172,9 @@
     <string name="picasso_title">Picasso (Bilder laden und zwischenspeichern)</string>
     <string name="cropper_title">Android Image Cropper (Bilder zuschneiden und rotieren)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (Mehrfachauswahl in Listen)</string>
-    <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
+    <string name="rtl_viewpager_title">RtlViewPager (Rechts-Links-Swipen)</string>
     <string name="joda_title">Joda-Time (Ersatz für Datums-Implementierung in Java)</string>
     <string name="stetho_title">Stetho (Datenbanken debuggen)</string>
     <string name="otto_title">Otto (Event Bus)</string>
-    <string name="photoview_title">PhotoView (Zoombare Gifs)</string>
+    <string name="photoview_title">PhotoView (Zoombare GIFs)</string>
 </resources>
