add a new string "Saving..."

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -43,6 +43,7 @@
     <string name="moving_success_partial">Einige Dateien konnten nicht verschoben werden</string>
     <string name="copying_success_partial">Einige Dateien konnten nicht kopiert werden</string>
     <string name="no_files_selected">Keine Dateien ausgewählt</string>
+    <string name="saving">Saving&#8230;</string>
 
     <!-- Create new -->
     <string name="create_new">Neuer Ordner</string>
