--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -43,6 +43,7 @@
     <string name="moving_success_partial">Nepodarilo sa presunúť niektoré súbory</string>
     <string name="copying_success_partial">Nepodarilo sa skopírovať niektoré súbory</string>
     <string name="no_files_selected">Niesú označené žiadne súbory</string>
+    <string name="saving">Ukladanie&#8230;</string>
 
     <!-- Create new -->
     <string name="create_new">Vytvoriť nový</string>
