--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="moving_success_partial">Some files could not be moved</string>
     <string name="copying_success_partial">Some files could not be copied</string>
     <string name="no_files_selected">No files selected</string>
+    <string name="saving">Saving&#8230;</string>
 
     <!-- Create new -->
     <string name="create_new">Create new</string>
