add new strings Hide and Unhide

--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -125,6 +125,8 @@
     <string name="share">Share</string>
     <string name="share_via">Share via</string>
     <string name="select_all">Select all</string>
+    <string name="hide">Hide</string>
+    <string name="unhide">Unhide</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sort by</string>
