--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -126,6 +126,8 @@
     <string name="share">Zdieľať</string>
     <string name="share_via">Zdieľať cez</string>
     <string name="select_all">Vybrať všetko</string>
+    <string name="hide">Skryť</string>
+    <string name="unhide">Odkryť</string>
 
     <!-- Sorting -->
     <string name="sort_by">Zoradiť podľa</string>
