--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -125,6 +125,8 @@
     <string name="share">Paylaş</string>
     <string name="share_via">Üzerinden paylaş</string>
     <string name="select_all">Tümünü seç</string>
+    <string name="hide">Hide</string>
+    <string name="unhide">Unhide</string>
 
     <!-- Sorting -->
     <string name="sort_by">Göre sırala</string>
