--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -125,6 +125,8 @@
     <string name="share">Teilen</string>
     <string name="share_via">Teilen via</string>
     <string name="select_all">Alle auswählen</string>
+    <string name="hide">Hide</string>
+    <string name="unhide">Unhide</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortieren nach</string>
