--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -125,6 +125,8 @@
     <string name="share">Compartir</string>
     <string name="share_via">Compartir con</string>
     <string name="select_all">Select all</string>
+    <string name="hide">Hide</string>
+    <string name="unhide">Unhide</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
