--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -125,6 +125,8 @@
     <string name="share">Condividi</string>
     <string name="share_via">Condividi via</string>
     <string name="select_all">Seleziona tutto</string>
+    <string name="hide">Hide</string>
+    <string name="unhide">Unhide</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordina per</string>
