--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -125,6 +125,8 @@
     <string name="share">共有</string>
     <string name="share_via">共有&#8230;</string>
     <string name="select_all">Select all</string>
+    <string name="hide">Hide</string>
+    <string name="unhide">Unhide</string>
 
     <!-- Sorting -->
     <string name="sort_by">並び替え</string>
