--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -125,6 +125,8 @@
     <string name="share">Dela</string>
     <string name="share_via">Dela via</string>
     <string name="select_all">Välj alla</string>
+    <string name="hide">Hide</string>
+    <string name="unhide">Unhide</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortera efter</string>
