--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -125,6 +125,8 @@
     <string name="share">分享</string>
     <string name="share_via">分享到</string>
     <string name="select_all">Select all</string>
+    <string name="hide">Hide</string>
+    <string name="unhide">Unhide</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
