--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -1,32 +1,32 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Cancelar</string>
-    <string name="search">Search</string>
-    <string name="save_as">Salvar como</string>
+    <string name="search">Buscar</string>
+    <string name="save_as">Guardar como</string>
     <string name="file_saved">Archivo guardado con éxito</string>
-    <string name="invalid_file_format">Invalid file format</string>
-    <string name="no_storage_permissions">We need the permission to access your storage</string>
+    <string name="invalid_file_format">Formato de archivo no válido</string>
+    <string name="no_storage_permissions">Necesitamos permiso para acceder a su almacenamiento</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renombrar archivo</string>
     <string name="rename_folder">Renombrar carpeta</string>
     <string name="rename_file_error">No se pudo renombrar el archivo</string>
     <string name="rename_folder_error">No se pudo renombrar la carpeta</string>
-    <string name="rename_folder_empty">El nombre de carpeta no puede estar vacío</string>
-    <string name="rename_folder_exists">A folder with that name already exists</string>
-    <string name="rename_folder_root">Cannot rename the root folder of a storage</string>
+    <string name="rename_folder_empty">El nombre de la carpeta no puede estar vacío</string>
+    <string name="rename_folder_exists">Ya existe una carpeta con ese nombre</string>
+    <string name="rename_folder_root">No se puede cambiar el nombre de la carpeta raíz del almacenamiento</string>
     <string name="rename_folder_ok">Carpeta renombrada correctamente</string>
     <string name="renaming_folder">Renombrando carpeta</string>
     <string name="filename_cannot_be_empty">El nombre de archivo no puede estar vacío</string>
-    <string name="filename_invalid_characters">Filename contains invalid characters</string>
-    <string name="extension_cannot_be_empty">Extension cannot be empty</string>
+    <string name="filename_invalid_characters">El nombre archivo contiene caracteres no válidos</string>
+    <string name="extension_cannot_be_empty">La extensión no puede estar vacía</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copiar</string>
     <string name="move">Mover</string>
-    <string name="copy_move">Copiar / Mover</string>
-    <string name="copy_to">Copy to</string>
-    <string name="move_to">Move to</string>
+    <string name="copy_move">Copiar/Mover</string>
+    <string name="copy_to">Copiar a</string>
+    <string name="move_to">Mover a</string>
     <string name="source">Origen</string>
     <string name="destination">Destino</string>
     <string name="select_destination">Seleccionar destino</string>
@@ -42,16 +42,16 @@
     <string name="moving_success">Archivos movidos correctamente</string>
     <string name="moving_success_partial">Algunos archivos no se pudieron mover</string>
     <string name="copying_success_partial">Algunos archivos no se pudieron copiar</string>
-    <string name="no_files_selected">No files selected</string>
-    <string name="saving">Saving&#8230;</string>
+    <string name="no_files_selected">No hay archivos seleccionados</string>
+    <string name="saving">Guardando&#8230;</string>
 
     <!-- Create new -->
     <string name="create_new">Crear nueva</string>
-    <string name="folder">Folder</string>
-    <string name="file">File</string>
+    <string name="folder">Carpeta</string>
+    <string name="file">Archivo</string>
     <string name="create_new_folder">Crear nueva carpeta</string>
-    <string name="name_taken">Un archivo o carpeta ya existe con ese nombre</string>
-    <string name="invalid_name">El nombre contiene carácteres inválidos</string>
+    <string name="name_taken">Ya existe un archivo o carpeta con ese nombre</string>
+    <string name="invalid_name">El nombre contiene caracteres no válidos</string>
     <string name="empty_name">Por favor introduce un nombre</string>
     <string name="unknown_error_occurred">Ocurrió un error desconocido</string>
 
@@ -68,7 +68,7 @@
     <string name="select_file">Seleccione un archivo</string>
     <string name="confirm_storage_access_title">Permita el acceso al almacenamiento externo</string>
     <string name="confirm_storage_access_text">Por favor, elija la carpeta raíz de la tarjeta SD en la próxima pantalla para conceder el acceso de escritura</string>
-    <string name="confirm_storage_access_text_sd">If you don\'t see the SD card, try this</string>
+    <string name="confirm_storage_access_text_sd">Si no ve la tarjeta SD, prueba esto</string>
 
     <plurals name="items">
         <item quantity="one">%1$d elemento</item>
@@ -80,7 +80,7 @@
     <string name="internal">Almacenamiento interno</string>
     <string name="sd_card">Tarjeta SD</string>
     <string name="root">Raíz /</string>
-    <string name="wrong_root_selected">Wrong folder selected, please select the root folder of your SD card</string>
+    <string name="wrong_root_selected">Se seleccionó la carpeta incorrecta, seleccione la carpeta raíz de su tarjeta SD</string>
 
     <!-- File properties -->
     <string name="properties">Propiedades</string>
@@ -92,11 +92,11 @@
     <string name="duration">Duración</string>
     <string name="artist">Artista</string>
     <string name="album">Álbum</string>
-    <string name="focal_length">Focal length</string>
-    <string name="exposure_time">Exposure time</string>
-    <string name="iso_speed">ISO speed</string>
+    <string name="focal_length">Longitud focal</string>
+    <string name="exposure_time">Tiempo de exposición</string>
+    <string name="iso_speed">Velocidad ISO</string>
     <string name="f_number">F-number</string>
-    <string name="camera">Camera</string>
+    <string name="camera">Cámara</string>
     <string name="exif">EXIF</string>
 
     <!-- Color customization -->
@@ -104,29 +104,29 @@
     <string name="text_color">Color del texto</string>
     <string name="primary_color">Color principal</string>
     <string name="restore_defaults">Valores por defecto</string>
-    <string name="theme">Theme</string>
-    <string name="light_theme">Tema suave</string>
+    <string name="theme">Tema</string>
+    <string name="light_theme">Tema claro</string>
     <string name="dark_theme">Tema oscuro</string>
-    <string name="custom">Customizado</string>
-    <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
+    <string name="custom">Personalizado</string>
+    <string name="changing_color_description">Cambiar un color hará que cambie a tema personalizado</string>
     <string name="save">Guardar</string>
     <string name="discard">Deshacer</string>
     <string name="undo_changes">Deshacer cambios</string>
-    <string name="undo_changes_confirmation">¿Seguro que quieres deshacer los cambios?</string>
-    <string name="save_before_closing">Tienes cambios sin aplicar. ¿Guardar antes de salir?</string>
+    <string name="undo_changes_confirmation">¿Seguro que quiere deshacer los cambios?</string>
+    <string name="save_before_closing">Tiene cambios sin aplicar. ¿Guardar antes de salir?</string>
 
     <!-- What's new -->
-    <string name="whats_new">What\'s new</string>
-    <string name="whats_new_disclaimer">* only the bigger updates are listed here, there are always some smaller improvements too</string>
+    <string name="whats_new">Qué hay de nuevo</string>
+    <string name="whats_new_disclaimer">* Sólo las actualizaciones más grandes se enumeran aquí, siempre hay algunas pequeñas mejoras también</string>
 
     <!-- Actionbar items -->
     <string name="delete">Eliminar</string>
     <string name="rename">Renombrar</string>
     <string name="share">Compartir</string>
     <string name="share_via">Compartir con</string>
-    <string name="select_all">Select all</string>
-    <string name="hide">Hide</string>
-    <string name="unhide">Unhide</string>
+    <string name="select_all">Seleccionar todo</string>
+    <string name="hide">Ocultar</string>
+    <string name="">Montrar</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
@@ -139,7 +139,7 @@
     <string name="extension">Extensión</string>
     <string name="ascending">Ascendente</string>
     <string name="descending">Descendente</string>
-    <string name="use_for_this_folder">Use for this folder only</string>
+    <string name="use_for_this_folder">Sólo para esta carpeta</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">¿Está seguro de querer continuar con la eliminación?</string>
@@ -169,7 +169,7 @@
     <!-- License -->
     <string name="notice">Esta aplicación usa las siguientes bibliotecas de terceros que hacen mi vida más fácil. Gracias.</string>
     <string name="third_party_licences">Licencias de terceros</string>
-    <string name="kotlin_title">Kotlin (Lenguaje de programación)</string>
+    <string name="kotlin_title">Kotlin (Programming language)</string>
     <string name="subsampling_title">Subsampling Scale Image View (zoomable imageviews)</string>
     <string name="glide_title">Glide (image loading and caching)</string>
     <string name="picasso_title">Picasso (image loading and caching)</string>
