--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -126,7 +126,7 @@
     <string name="share_via">Compartir con</string>
     <string name="select_all">Seleccionar todo</string>
     <string name="hide">Ocultar</string>
-    <string name="">Montrar</string>
+    <string name="unhide">Montrar</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
